fixed line break in header log out button

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -31,7 +31,7 @@
   height: 100%;
   line-height: 100px;
   vertical-align: middle;
-  width: 270px;
+  width: 570px;
 }
 
 #logout {
